[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
embassy-executor = { version = "0.5.0", path = "../embassy/embassy-executor" , features = ["arch-riscv32", "nightly", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3.1", path = "../embassy/embassy-time" }
static_cell = "2.0.0"

[profile.release]
debug = true
